update the format

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -63,69 +63,172 @@
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
+/* href */
 a {
-  color: #1772d0;
+  color: #0095ff;
   text-decoration: none;
 }
 
 a:focus,
 a:hover {
-  color: #f09228;
+  color: #FF9547;
   text-decoration: none;
 }
 
-body,
+body {
+  font-size: 16px;
+  line-height: 1.6;
+}
+
+tr,
 td,
 th,
-tr,
 p,
-a {
+a,
+li {
   font-family: 'Lato', Verdana, Helvetica, sans-serif;
-  font-size: 14px
+  font-size: 16px;
 }
 
-strong {
+h2 {
+  margin: 0;
+  font-weight: normal;
   font-family: 'Lato', Verdana, Helvetica, sans-serif;
+  font-size: 24px;
+  text-decoration: underline;
+  text-decoration-color: #66c0ff;
+  text-decoration-thickness: 3px;
+}
+
+h3 {
+  margin: 0;
+  font-size: 18px;
+  font-weight: bold;
+  padding-bottom: 6px;
+}
+
+.strong-author {
+  font-family: 'Lato', Verdana, Helvetica, sans-serif;
+  font-size: 14px;
+  font-weight: bold;
+}
+
+.award-venue {
+  color: #ffa03c;
+  font-weight: bold;
+}
+
+.strong-venue {
+  color: #66c0ff;
+  font-weight: bold;
+}
+
+.venue {
+  font-weight: bold;
+  /* font-style: italic; */
+}
+
+.accepted-venue {
+  background-color: #eacef1;
+  color: #673797;
+  padding: 2px 6px;
+  border-radius: 15px;
+  font-size: 16px;
+  font-weight: bold;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+
+.accepted-venue-detail {
+  font-weight: bold;
+  color: #663399;
+}
+
+.TLDR {
+  color: #9f9f9f;
+  padding-top: 3px;
+}
+
+.TLDR strong {
+  font-weight: bold;
+}
+
+.news-list {
+  list-style-type: disc;
   font-size: 14px;
 }
 
-heading {
-  font-family: 'Lato', Verdana, Helvetica, sans-serif;
-  font-size: 22px;
-}
-
-papertitle {
-  font-family: 'Lato', Verdana, Helvetica, sans-serif;
+.award-list {
+  list-style-type: disc;
   font-size: 14px;
-  font-weight: 700
 }
 
-name {
+.award-list li {
+  margin-bottom: 3px;
+  font-size: 14px;
+}
+
+.award-list .year {
+  float: right
+}
+
+.webname {
+  padding-top: 20px;
+  margin: 0;
   font-family: 'Lato', Verdana, Helvetica, sans-serif;
   font-size: 32px;
 }
 
-.one {
-  width: 160px;
-  height: 160px;
-  position: relative;
+.papertitle {
+  font-family: 'Lato', Verdana, Helvetica, sans-serif;
+  font-size: 18px;
+  font-weight: 700;
 }
 
-.two {
-  width: 160px;
-  height: 160px;
-  position: absolute;
-  transition: opacity .2s ease-in-out;
-  -moz-transition: opacity .2s ease-in-out;
-  -webkit-transition: opacity .2s ease-in-out;
+.author {
+  font-family: 'Lato', Verdana, Helvetica, sans-serif;
+  font-size: 14px;
 }
 
-.fade {
-  transition: opacity .2s ease-in-out;
-  -moz-transition: opacity .2s ease-in-out;
-  -webkit-transition: opacity .2s ease-in-out;
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
-span.highlight {
-  background-color: #ffffd0;
+.modal-content {
+  margin: 10% auto;
+  padding: 20px;
+  background-color: white;
+  border-radius: 10px;
+  border: 5px solid #66c0ff;
+  width: 32%;
+  max-width: 400px;
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.dates {
+  font-size: 16px;
+  color: gray;
+  float: right;
 }
